--- a/Class - 1/index.html
+++ b/Class - 1/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Vijay</h1>
     <header>
         <div class="logo">
             <img src="https://img.freepik.com/free-vector/bird-colorful-logo-gradient-vector_343694-1365.jpg?size=338&ext=jpg&ga=GA1.1.1224184972.1714766400&semt=sph"
