update(feat): Mark tag added

--- a/Class - 1/index.html
+++ b/Class - 1/index.html
@@ -26,6 +26,8 @@
         </nav>
     </header>
 
+    <mark>Vijay</mark>
+
     <main>
         <section class="product-section">
             <h2>T-Shirts</h2>
